# nassh-proxy

./: .env.example  .gitignore  Dockerfile  FINDINGS.md  Makefile  README.md  justfile  pyproject.toml
deploy/: README.md
deploy/apache/: ssh-relay.conf
deploy/cloudflared/: config.yml
deploy/docker/: docker-compose.yml
deploy/gcp/: deploy-gce.sh
deploy/nginx/: ssh-relay.conf
deploy/systemd/: install.sh  ssh-relay.service  update.sh
docs/: configuration.md  debugging.md  installation.md  logging.md
docs/deploy/: apache.md  cloudflare-access.md  gcp-iap.md  nginx.md
src/ssh_relay/: app.py  events.py  identity.py  net.py  ports.py  protocol.py  session.py  sinks.py  target_policy.py
tests/: test_cookie_path.py  test_identity_config.py  test_protocol.py  test_reconnect.py  test_relay.py  test_session_caps.py  test_target_policy.py  test_trusted_proxy.py
